# kokkos_headeronly_pybind11_issue_reproducer

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: module_pybind.cc.97D4247F817E44FE.idx  test.hpp.1AEC62500C3D55F6.idx  utils_pywrap.cc.96B4AB152E5BA19B.idx
src/: CMakeLists.txt
src/repro/: CMakeLists.txt  __init__.py
src/repro/module/: CMakeLists.txt  module_pybind.cc  test.hpp
src/repro/utils/: CMakeLists.txt  utils_pywrap.cc
